[package]
name = "link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
playit-agent-proto = {git = "https://github.com/playit-cloud/playit-agent/", branch = "master"}
playit-agent-core = { path = "../playit-agent/packages/agent_core" }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.7.4"
rand = "0.8.5"
hex = "0.4.3"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
